--- a/index.html
+++ b/index.html
@@ -533,8 +533,9 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 200px;
-  height: 200px;
+  width: 200px !important;
+  height: 200px !important;
+  display: block !important;
   transform: translate(-87%, -115%); /* ← ключевой момент */
   pointer-events: none;
   z-index: 1;
@@ -736,38 +737,48 @@
 
   // --- ДОБАВЛЯЕМ РАКЕТУ В СЦЕНУ ВСЕГДА ---
   function createScene() {
-    HEIGHT = 350;
-    WIDTH = 350;
+  HEIGHT = 350;
+  WIDTH = 350;
 
-    scene = new THREE.Scene();
-    scene.fog = new THREE.Fog(0x5d0361, 10, 1500);
-
-    camera = new THREE.PerspectiveCamera(60, WIDTH / HEIGHT, 1, 10000);
-    camera.position.set(0, -10, 500);
-
-    renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
-    renderer.setSize(WIDTH, HEIGHT);
-    renderer.shadowMap.enabled = true;
-
-    const container = document.getElementById("canvas");
-    container.innerHTML = '';
-    container.appendChild(renderer.domElement);
-
-    const loader = new THREE.GLTFLoader();
-    loader.load("https://stivs.dev/assets/rocket/rocket.gltf", (gltf) => {
-      if (rocket) {
-        scene.remove(rocket);
-      }
-
-      rocket = gltf.scene;
-      rocket.position.y = 50;
-      scene.add(rocket);
-    });
-
-
-
-    window.addEventListener("resize", () => {});
+  if (!isWebGLAvailable()) {
+    // Если WebGL не поддерживается, показываем только SVG-заглушку
+    document.getElementById('rocket-stub').style.display = 'block';
+    document.getElementById('rocket-3d-wrapper').style.display = 'none';
+    return;
   }
+
+  scene = new THREE.Scene();
+  scene.fog = new THREE.Fog(0x5d0361, 10, 1500);
+
+  camera = new THREE.PerspectiveCamera(60, WIDTH / HEIGHT, 1, 10000);
+  camera.position.set(0, -10, 500);
+
+  renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+  renderer.setSize(WIDTH, HEIGHT);
+  renderer.shadowMap.enabled = true;
+
+  const container = document.getElementById("canvas");
+  container.innerHTML = '';
+  container.appendChild(renderer.domElement);
+
+  const loader = new THREE.GLTFLoader();
+  loader.load(
+  './rocket/rocket.gltf',
+  (gltf) => {
+    if (rocket) scene.remove(rocket);
+    rocket = gltf.scene;
+    rocket.position.y = 50;
+    scene.add(rocket);
+    document.getElementById('rocket-stub').style.display = 'none';
+    document.getElementById('rocket-3d-wrapper').style.display = 'block';
+  },
+  undefined,
+  (error) => {
+    console.error("Ошибка загрузки GLTF модели:", error);
+    showStub();
+  }
+);
+}
 
   function createLights() {
     const ambientLight = new THREE.HemisphereLight(0x404040, 0x404040, 1);
@@ -1040,6 +1051,17 @@ function startGame() {
       }
     }
     
+    function isWebGLAvailable() {
+  try {
+    const canvas = document.createElement('canvas');
+    return !!window.WebGLRenderingContext && (
+      canvas.getContext('webgl') || canvas.getContext('experimental-webgl')
+    );
+  } catch (e) {
+    return false;
+  }
+}
+
     // Вывод средств
     function submitWithdraw() {
       const cardNumber = document.querySelector('#withdrawOverlay .form-input[type="text"]').value;
