--- a/index.html
+++ b/index.html
@@ -464,13 +464,18 @@
       .game-container {
         flex-direction: column;
         gap: 20px;
-        margin-top: 80px;
+        height: 700px;
+        margin-top: 100px;
         padding: 20px;
       }
-      
-      .rocket-container {
-        height: 220px;
-      }
+
+          .rocket {
+      position: relative;
+      width: 60px;
+      height: 150px;
+      transform: translateY(20px);
+      animation: float 3s ease-in-out infinite;
+    }
       
       .multiplier {
         font-size: 40px;
@@ -533,9 +538,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 200px !important;
-  height: 200px !important;
-  display: block !important;
+  width: 200px;
+  height: 200px;
   transform: translate(-87%, -115%); /* ← ключевой момент */
   pointer-events: none;
   z-index: 1;
