--- a/index.html
+++ b/index.html
@@ -530,29 +530,16 @@
   box-shadow: 0 0 30px rgba(255, 165, 0, 0.9);
 }
 
-/* #canvas {
+#canvas {
   position: absolute;
   top: 50%;
   left: 50%;
   width: 200px;
   height: 200px;
-  transform: translate(-87%, -115%); /
+  transform: translate(-87%, -115%); /* ← ключевой момент */
   pointer-events: none;
   z-index: 1;
-} */
-
-#canvas {
-  position: relative;
-  width: 100%;
-  max-width: 350px;
-  height: 350px;
-  margin: 0 auto;
-  pointer-events: none;
-  z-index: 1;
-  transform: none !important;
 }
-
-
 
 .fire-wrapper {
   left: 50%;
@@ -668,8 +655,22 @@
         <div class="drop drop11"></div>
         <div class="drop drop12"></div>
         <div id="canvas"></div>
-
         </div>
+
+        <!-- ДОБАВЬТЕ SVG-ракету для мобильных -->
+        <div id="rocket-mobile" style="display: none; width: 120px; height: 120px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index:2;">
+          <svg viewBox="0 0 60 120" width="100%" height="100%">
+            <g id="mobile-rocket-group">
+              <ellipse cx="30" cy="80" rx="18" ry="32" fill="#eee" stroke="#aaa" stroke-width="2"/>
+              <rect x="25" y="20" width="10" height="60" rx="5" fill="#ccc" stroke="#888" stroke-width="2"/>
+              <polygon points="30,5 40,30 20,30" fill="#888"/>
+              <polygon points="25,80 10,110 30,90" fill="#444"/>
+              <polygon points="35,80 50,110 30,90" fill="#444"/>
+              <ellipse cx="30" cy="115" rx="7" ry="10" fill="orange" opacity="0.7"/>
+            </g>
+          </svg>
+        </div>
+
       </div>
     </div>
     
@@ -747,11 +748,14 @@
     let sceneInitialized = false;
     let showStubRocket = false;
 
+  function isMobile() {
+  return /Android|iPhone|iPad|iPod|Opera Mini|IEMobile|WPDesktop/i.test(navigator.userAgent);
+}
+
   // --- ДОБАВЛЯЕМ РАКЕТУ В СЦЕНУ ВСЕГДА ---
   function createScene() {
-    const container = document.getElementById("canvas");
-    WIDTH = container.clientWidth;
-    HEIGHT = container.clientHeight;
+    HEIGHT = 350;
+    WIDTH = 350;
 
     scene = new THREE.Scene();
     scene.fog = new THREE.Fog(0x5d0361, 10, 1500);
@@ -764,7 +768,7 @@
     renderer.setSize(WIDTH, HEIGHT);
     renderer.shadowMap.enabled = true;
 
-
+    const container = document.getElementById("canvas");
     container.innerHTML = '';
     container.appendChild(renderer.domElement);
 
@@ -779,15 +783,17 @@
       scene.add(rocket);
     });
 
+
+
     window.addEventListener("resize", () => {
-      const container = document.getElementById("canvas");
-      WIDTH = container.clientWidth;
-      HEIGHT = container.clientHeight;
-      camera.aspect = WIDTH / HEIGHT;
-      camera.updateProjectionMatrix();
-      renderer.setSize(WIDTH, HEIGHT);
-      renderer.setPixelRatio(window.devicePixelRatio);
-    });
+  WIDTH = 350;
+  HEIGHT = 350;
+  camera.aspect = WIDTH / HEIGHT;
+  camera.updateProjectionMatrix();
+  renderer.setSize(WIDTH, HEIGHT);
+  renderer.setPixelRatio(window.devicePixelRatio);
+});
+
   }
 
   function createLights() {
@@ -874,13 +880,34 @@
 // }
 
   const main = () => {
+  if (isMobile()) {
+    // Показываем SVG-ракету, скрываем 3D
+    document.getElementById('rocket-3d-wrapper').style.display = 'none';
+    document.getElementById('rocket-mobile').style.display = 'block';
+    animateMobileRocket();
+  } else {
+    // Обычная 3D-ракета
     createScene();
     createLights();
     loop();
-  };
+  }
+};
+
+// Простая анимация SVG-ракеты
+  function animateMobileRocket() {
+    const group = document.getElementById('mobile-rocket-group');
+    let angle = 0;
+    let t = 0;
+    function anim() {
+      angle += 2;
+      t += 0.05;
+      group.setAttribute('transform', `rotate(${angle} 30 60) translate(0 ${Math.sin(t)*6})`);
+      requestAnimationFrame(anim);
+    }
+    anim();
+  }
 
   main();
-
 
 
     // Игровые переменные
