--- a/index.html
+++ b/index.html
@@ -509,6 +509,10 @@
       .rocket-container {
         height: 220px;
       }
+
+      .rocket-fire {
+        display: none !important;
+      }
       
       .multiplier {
         font-size: 40px;
@@ -735,6 +739,21 @@
             </defs>
           </g>
         </svg>
+
+        <!-- Частицы и дождь для мобильной версии -->
+        <div class="rain rain1"></div>
+        <div class="rain rain2"><div class="drop drop2"></div></div>
+        <div class="rain rain3"></div>
+        <div class="rain rain4"></div>
+        <div class="rain rain5"><div class="drop drop5"></div></div>
+        <div class="rain rain6"></div>
+        <div class="rain rain7"></div>
+        <div class="rain rain8"><div class="drop drop8"></div></div>
+        <div class="rain rain9"></div>
+        <div class="rain rain10"></div>
+        <div class="drop drop11"></div>
+        <div class="drop drop12"></div>
+
       </div>
 
       </div>
@@ -948,6 +967,7 @@
 
   // ...existing code...
 
+
 function animateMobileRocketStart() {
   const group = document.getElementById('mobile-rocket-group');
   const fire = document.getElementById('mobile-rocket-fire');
@@ -1019,6 +1039,7 @@ const main = () => {
 
 main();
 
+// ...existing code...
 
 
     // Игровые переменные
