--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         </div>
 
        <div id="rocket-mobile" style="display: none; width: 120px; height: 120px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index:2;">
-        <svg viewBox="0 0 80 170" width="300px" height="200px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg viewBox="0 0 320 320" width="320" height="220">
           <g id="mobile-rocket-group">
             <!-- Пламя -->
             <g id="mobile-rocket-fire">
