--- a/index.html
+++ b/index.html
@@ -698,9 +698,9 @@
         <div id="canvas"></div>
         </div>
 
-       <div id="rocket-mobile" style="display: none; width: 320px; height: 220px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index:2;">
-  <svg viewBox="0 0 320 220" width="320" height="220">
-    <g id="mobile-rocket-group">
+       <div id="rocket-mobile" style="display: none; width: 520px; height: 320px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index:2;">
+  <svg viewBox="0 0 520 320" width="520" height="320">
+    <g id="mobile-rocket-group" transform="scale(1.625)">
       <!-- Пламя -->
       <g id="mobile-rocket-fire">
         <ellipse cx="160" cy="205" rx="52" ry="44" fill="url(#fireGrad)" opacity="0.92"/>
@@ -750,6 +750,7 @@
       </defs>
     </g>
   </svg>
+
   <!-- Частицы и дождь для мобильной версии -->
   <div class="rain rain1"></div>
   <div class="rain rain2"><div class="drop drop2"></div></div>
@@ -764,6 +765,7 @@
   <div class="drop drop11"></div>
   <div class="drop drop12"></div>
 </div>
+
 
       </div>
     </div>
