--- a/index.html
+++ b/index.html
@@ -699,73 +699,73 @@
         </div>
 
        <div id="rocket-mobile" style="display: none; width: 320px; height: 220px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); z-index:2;">
-  <svg viewBox="0 0 320 320" width="320" height="220">
-    <g id="mobile-rocket-group" transform="scale(1.625)">
-      <!-- Пламя -->
-      <g id="mobile-rocket-fire">
-        <ellipse cx="160" cy="205" rx="52" ry="44" fill="url(#fireGrad)" opacity="0.92"/>
-        <ellipse cx="160" cy="220" rx="24" ry="24" fill="orange" opacity="0.7"/>
-        <ellipse cx="160" cy="210" rx="28" ry="32" fill="url(#fireGrad2)" opacity="0.7"/>
-      </g>
-      <!-- Крылья -->
-      <polygon points="72,140 8,200 160,170" fill="#444" stroke="#222" stroke-width="8"/>
-      <polygon points="248,140 312,200 160,170" fill="#444" stroke="#222" stroke-width="8"/>
-      <!-- Корпус -->
-      <rect x="88" y="40" width="144" height="130" rx="72" fill="url(#bodyGrad)" stroke="#aaa" stroke-width="8"/>
-      <!-- Верх -->
-      <ellipse cx="160" cy="40" rx="72" ry="32" fill="url(#noseGrad)" stroke="#888" stroke-width="8"/>
-      <polygon points="160,8 88,40 232,40" fill="url(#noseGrad2)" stroke="#888" stroke-width="8"/>
-      <!-- Иллюминатор -->
-      <ellipse cx="160" cy="90" rx="36" ry="40" fill="#b3e0ff" stroke="#5ec6ff" stroke-width="8"/>
-      <ellipse cx="148" cy="82" rx="10" ry="12" fill="#fff" opacity="0.7"/>
-      <!-- Блик -->
-      <rect x="200" y="70" width="20" height="80" rx="10" fill="#fff" opacity="0.13"/>
-      <!-- Тень -->
-      <ellipse cx="160" cy="210" rx="80" ry="20" fill="#000" opacity="0.13"/>
-      <!-- Градиенты -->
-      <defs>
-        <linearGradient id="bodyGrad" x1="88" y1="40" x2="232" y2="170" gradientUnits="userSpaceOnUse">
-          <stop offset="0%" stop-color="#eee"/>
-          <stop offset="60%" stop-color="#bbb"/>
-          <stop offset="100%" stop-color="#888"/>
-        </linearGradient>
-        <linearGradient id="noseGrad" x1="160" y1="8" x2="160" y2="72" gradientUnits="userSpaceOnUse">
-          <stop offset="0%" stop-color="#fff"/>
-          <stop offset="100%" stop-color="#888"/>
-        </linearGradient>
-        <linearGradient id="noseGrad2" x1="160" y1="8" x2="160" y2="40" gradientUnits="userSpaceOnUse">
-          <stop offset="0%" stop-color="#fff"/>
-          <stop offset="100%" stop-color="#bbb"/>
-        </linearGradient>
-        <radialGradient id="fireGrad" cx="160" cy="205" r="52" gradientUnits="userSpaceOnUse">
-          <stop offset="0%" stop-color="#fff700"/>
-          <stop offset="60%" stop-color="#ff8c00"/>
-          <stop offset="100%" stop-color="#ff4500"/>
-        </radialGradient>
-        <radialGradient id="fireGrad2" cx="160" cy="210" r="28" gradientUnits="userSpaceOnUse">
-          <stop offset="0%" stop-color="#fff"/>
-          <stop offset="80%" stop-color="#ffb300"/>
-          <stop offset="100%" stop-color="#ff4500"/>
-        </radialGradient>
-      </defs>
-    </g>
-  </svg>
+        <svg viewBox="0 0 80 170" width="100%" height="100%">
+        <g id="mobile-rocket-group">
+          <!-- Пламя -->
+          <g id="mobile-rocket-fire">
+            <ellipse cx="40" cy="158" rx="13" ry="22" fill="url(#fireGrad)" opacity="0.92"/>
+            <ellipse cx="40" cy="170" rx="6" ry="12" fill="orange" opacity="0.7"/>
+            <ellipse cx="40" cy="162" rx="7" ry="16" fill="url(#fireGrad2)" opacity="0.7"/>
+          </g>
+          <!-- Крылья -->
+          <polygon points="18,110 2,160 40,135" fill="#444" stroke="#222" stroke-width="2"/>
+          <polygon points="62,110 78,160 40,135" fill="#444" stroke="#222" stroke-width="2"/>
+          <!-- Корпус -->
+          <rect x="22" y="35" width="36" height="100" rx="18" fill="url(#bodyGrad)" stroke="#aaa" stroke-width="2"/>
+          <!-- Верх -->
+          <ellipse cx="40" cy="35" rx="18" ry="16" fill="url(#noseGrad)" stroke="#888" stroke-width="2"/>
+          <polygon points="40,5 22,35 58,35" fill="url(#noseGrad2)" stroke="#888" stroke-width="2"/>
+          <!-- Иллюминатор -->
+          <ellipse cx="40" cy="70" rx="9" ry="10" fill="#b3e0ff" stroke="#5ec6ff" stroke-width="2"/>
+          <ellipse cx="37" cy="67" rx="2.5" ry="3" fill="#fff" opacity="0.7"/>
+          <!-- Блик -->
+          <rect x="50" y="50" width="5" height="50" rx="2.5" fill="#fff" opacity="0.13"/>
+          <!-- Тень -->
+          <ellipse cx="40" cy="162" rx="20" ry="7" fill="#000" opacity="0.13"/>
+          <!-- Градиенты -->
+          <defs>
+            <linearGradient id="bodyGrad" x1="22" y1="35" x2="58" y2="135" gradientUnits="userSpaceOnUse">
+              <stop offset="0%" stop-color="#eee"/>
+              <stop offset="60%" stop-color="#bbb"/>
+              <stop offset="100%" stop-color="#888"/>
+            </linearGradient>
+            <linearGradient id="noseGrad" x1="40" y1="15" x2="40" y2="51" gradientUnits="userSpaceOnUse">
+              <stop offset="0%" stop-color="#fff"/>
+              <stop offset="100%" stop-color="#888"/>
+            </linearGradient>
+            <linearGradient id="noseGrad2" x1="40" y1="5" x2="40" y2="35" gradientUnits="userSpaceOnUse">
+              <stop offset="0%" stop-color="#fff"/>
+              <stop offset="100%" stop-color="#bbb"/>
+            </linearGradient>
+            <radialGradient id="fireGrad" cx="40" cy="158" r="18" gradientUnits="userSpaceOnUse">
+              <stop offset="0%" stop-color="#fff700"/>
+              <stop offset="60%" stop-color="#ff8c00"/>
+              <stop offset="100%" stop-color="#ff4500"/>
+            </radialGradient>
+            <radialGradient id="fireGrad2" cx="40" cy="162" r="10" gradientUnits="userSpaceOnUse">
+              <stop offset="0%" stop-color="#fff"/>
+              <stop offset="80%" stop-color="#ffb300"/>
+              <stop offset="100%" stop-color="#ff4500"/>
+            </radialGradient>
+          </defs>
+        </g>
+      </svg>
 
-  <!-- Частицы и дождь для мобильной версии -->
-  <div class="rain rain1"></div>
-  <div class="rain rain2"><div class="drop drop2"></div></div>
-  <div class="rain rain3"></div>
-  <div class="rain rain4"></div>
-  <div class="rain rain5"><div class="drop drop5"></div></div>
-  <div class="rain rain6"></div>
-  <div class="rain rain7"></div>
-  <div class="rain rain8"><div class="drop drop8"></div></div>
-  <div class="rain rain9"></div>
-  <div class="rain rain10"></div>
-  <div class="drop drop11"></div>
-  <div class="drop drop12"></div>
-</div>
+        <!-- Частицы и дождь для мобильной версии -->
+        <div class="rain rain1"></div>
+        <div class="rain rain2"><div class="drop drop2"></div></div>
+        <div class="rain rain3"></div>
+        <div class="rain rain4"></div>
+        <div class="rain rain5"><div class="drop drop5"></div></div>
+        <div class="rain rain6"></div>
+        <div class="rain rain7"></div>
+        <div class="rain rain8"><div class="drop drop8"></div></div>
+        <div class="rain rain9"></div>
+        <div class="rain rain10"></div>
+        <div class="drop drop11"></div>
+        <div class="drop drop12"></div>
 
+      </div>
 
       </div>
     </div>
