--- a/index.html
+++ b/index.html
@@ -752,19 +752,18 @@
       </svg>
 
         <!-- Частицы и дождь для мобильной версии -->
-        <div class="rain rain1"></div>
-        <div class="rain rain2"><div class="drop drop2"></div></div>
-        <div class="rain rain3"></div>
-        <div class="rain rain4"></div>
-        <div class="rain rain5"><div class="drop drop5"></div></div>
-        <div class="rain rain6"></div>
-        <div class="rain rain7"></div>
-        <div class="rain rain8"><div class="drop drop8"></div></div>
-        <div class="rain rain9"></div>
-        <div class="rain rain10"></div>
-        <div class="drop drop11"></div>
-        <div class="drop drop12"></div>
-
+        <div class="rain rain1" style="display:none"></div>
+        <div class="rain rain2" style="display:none"><div class="drop drop2" style="display:none"></div></div>
+        <div class="rain rain3" style="display:none"></div>
+        <div class="rain rain4" style="display:none"></div>
+        <div class="rain rain5" style="display:none"><div class="drop drop5" style="display:none"></div></div>
+        <div class="rain rain6" style="display:none"></div>
+        <div class="rain rain7" style="display:none"></div>
+        <div class="rain rain8" style="display:none"><div class="drop drop8" style="display:none"></div></div>
+        <div class="rain rain9" style="display:none"></div>
+        <div class="rain rain10" style="display:none"></div>
+        <div class="drop drop11" style="display:none"></div>
+        <div class="drop drop12" style="display:none"></div>
       </div>
 
       </div>
